--- a/ebooks/modified_abalone_betacal_xgb.qmd
+++ b/ebooks/modified_abalone_betacal_xgb.qmd
@@ -1,12 +1,19 @@
-# Estimations {#sec-real-estimations}
-
+# Recalibration: Example {#sec-real-example-xgb}
 
 :::{.callout-note}
 
-This chapter estimates the binary events from the datasets introduced in [Chapter -@sec-priors-beta] using extreme gradient boosting models. For this model, we perform a grid search. For each set of hyperparameters of the grid search, we compute the estimated scores by the model and calculate performance, calibration, and divergence metrics. For the divergence metrics, we assume that the underlying probabilities are distributed according to a Beta distribution whose parameters were estimated in [Chapter -@sec-priors-beta].
+This chapter illustrates the application of the method using one example of real-world datasets. We have trained a GAMSEL model on a binary variable to estimate the underlying event probabilities using available covariates. We therefore consider the Beta prior as the "true probability distribution". Here, we train a certain XGBoost model (the hyperparameters are selected randomly on the validation sample), and predict it to train/validation/calibration/test sets. Recalibration models are fitted on the calibration sets and then applied to the test to calculate performance, dispersion and calibration metrics.
 
 :::
 
+
+:::{.callout-warning}
+
+## Code Availability
+
+The functions for data preprocessing, model estimation, and Beta distribution fitting are stored in `../scripts/functions/real-data.R` and will be used in subsequent chapters.
+
+:::
 
 ```{r load-libraries}
 library(tidyverse)
@@ -16,7 +23,9 @@ library(xgboost)
 library(pbapply)
 library(parallel)
 library(gam)
+library(betacal)
 library(gamsel)
+library(locfit)
 
 # Colours for train/validation/calibration/test
 colour_samples <- c(
@@ -30,7 +39,7 @@ colour_recalib <- c(
   "None" = "#88CCEE",
   "Platt" = "#44AA99",
   "Isotonic" = "#882255",
-  "Beta" = "#D55E00",
+  "Beta" = "darkgoldenrod",
   "Locfit" = "firebrick3"
 )
 
@@ -62,9 +71,17 @@ theme_paper <- function (...) {
 }
 ```
 
-## Functions
+## Setup
 
+### XGBoost
+
+To train the models, we rely on the {xgboost} R package.
+```{r load-xgboost}
+library(xgboost)
+```
 ### Recalibration
+
+Here, we define a function to recalibrate predicted scores using either Platt scaling or isotonic regression. The recalibration algorithm is first trained on the calibration set and then applied to both the calibration and test sets.
 
 ```{r define-recalibrate}
 #' Recalibrates scores using a calibration
@@ -82,6 +99,7 @@ recalibrate <- function(obs_calib,
                         obs_test,
                         pred_calib,
                         pred_test,
+                        i_grid,
                         method = c("platt", "isotonic", "beta", "locfit")) {
   data_calib <- tibble(d = obs_calib, scores = pred_calib)
   data_test <- tibble(d = obs_test, scores = pred_test)
@@ -96,7 +114,11 @@ recalibrate <- function(obs_calib,
     score_c_calib <- fit_iso(data_calib$scores)
     score_c_test <- fit_iso(data_test$scores)
   } else if (method == "beta") {
-    fit_beta <- betacal::beta_calibration(data_calib$scores, data_calib$d, parameters = "abm")
+    if (i_grid == 3){
+      fit_beta <- beta_calibration(data_calib$scores, data_calib$d, parameters = "am") # use am instead of abm to prevent pbs with uniroot function
+    } else {
+      fit_beta <- beta_calibration(data_calib$scores, data_calib$d, parameters = "abm")
+    }
     score_c_calib <- beta_predict(data_calib$scores, fit_beta)
     score_c_test <- beta_predict(data_test$scores, fit_beta)
   } else if (method == "locfit") {
@@ -129,10 +151,13 @@ recalibrate <- function(obs_calib,
     tb_score_c_calib = tb_score_c_calib,
     tb_score_c_test = tb_score_c_test
   )
+  
 }
 ```
 
-### Dispersion Metrics with Beta prior
+### Dispersion Metrics
+
+We modify our `dispersion_metrics()`{.R} function to replace the vector of simulated true probabilities with the parameters of a Beta distribution. This adjustment allows us to compute the divergence between the model-estimated scores and the specified Beta distribution.
 
 ```{r}
 #| code-fold: true
@@ -160,7 +185,7 @@ dispersion_metrics_beta <- function(shape_1 = 1, shape_2 = 1, scores){
   inter_q_80 <- diff(quantile(scores, c(.9, .1))) /
     diff(qbeta(c(.9, .1), shape_1, shape_2))
   inter_q_50 <- diff(quantile(scores, c(.75,.25))) /
-    diff(qbeta(c(.75,.25), shape_1, shape_1))
+    diff(qbeta(c(.75,.25), shape_1, shape_2))
 
   # KL divergences
   m <- 10 # Number of bins
@@ -233,8 +258,11 @@ disp_metrics_dataset <- function(prior, scores) {
 }
 ```
 
-### Extreme Gradient Boosting
+### Estimation Functions: Extreme Gradient Boosting
 
+We train XGB models on the dataset "spambase", varying the maximum tree depth (with values of 2, 4, or 6) and the number of boosting iterations (ranging from 2 to 500). At each iteration, we compute metrics based on scores from both the train, calibration, validation and test samples, as well as the recalibrated scores.
+
+This function allows us to calculate the performance, dispersion and calibration metrics on all sets of the dataset at a given iteration for a single XGBoost algorithm:
 ```{r define-get_metrics_xgb_iter}
 #| code-fold: true
 #| code-summary: Function `get_metrics_xgb_iter()`{.R}
@@ -287,6 +315,7 @@ get_metrics_xgb_iter <- function(scores,
     obs_test = data_test |> dplyr::pull(!!target_name), 
     pred_calib = scores_calib, 
     pred_test = scores_test, 
+    i_grid = ind,
     method = "platt"
   )
   scores_c_platt_calib <- res_recalibration_platt$tb_score_c_calib$p_c
@@ -297,7 +326,8 @@ get_metrics_xgb_iter <- function(scores,
     obs_calib = data_calib |> dplyr::pull(!!target_name), 
     obs_test = data_test |> dplyr::pull(!!target_name), 
     pred_calib = scores_calib, 
-    pred_test = scores_test, 
+    pred_test = scores_test,
+    i_grid = ind,
     method = "isotonic"
   )
   scores_c_iso_calib <- res_recalibration_iso$tb_score_c_calib$p_c
@@ -309,6 +339,7 @@ get_metrics_xgb_iter <- function(scores,
     obs_test = data_test |> dplyr::pull(!!target_name), 
     pred_calib = scores_calib, 
     pred_test = scores_test,
+    i_grid = ind,
     method = "beta"
   )
   scores_c_beta_calib <- res_recalibration_beta$tb_score_c_calib$p_c
@@ -320,6 +351,7 @@ get_metrics_xgb_iter <- function(scores,
     obs_test = data_test |> dplyr::pull(!!target_name), 
     pred_calib = scores_calib, 
     pred_test = scores_test,
+    i_grid = ind,
     method = "locfit"
   )
   scores_c_locfit_calib <- res_recalibration_locfit$tb_score_c_calib$p_c
@@ -684,6 +716,7 @@ get_metrics_xgb_iter <- function(scores,
 ```
 
 
+We then define a function to predict a XGBoost algorithm on train, validation, calibration and test samples given an xgboost object (fit). We are able to obtain the predicted scores at a specified iteration during the training of the algorithm:
 ```{r define-predict_score_iter}
 #| code-fold: true
 #| code-summary: Function `predict_score_iter()`{.R}
@@ -721,7 +754,7 @@ predict_score_iter <- function(fit_xgb,
 }
 ```
 
-
+This function calculates the different metrics on train, validation, calibration and test samples for a given XGBoost algorithm at all iterations:
 ```{r define-simul_xgb_helper}
 #| code-fold: true
 #| code-summary: Function `simul_xgb_helper()`{.R}
@@ -876,6 +909,43 @@ simul_xgb_helper <- function(data_train,
 }
 ```
 
+## Import Data and Prior
+
+We load the dataset "spambase" and the associated Beta prior on both train and test sets.
+```{r load-data-priors}
+load("../output/real-data/tb_abalone.rda") # dataset
+load("../output/real-data/priors_abalone.rda") # scores_gamsel
+
+prior <- priors_abalone
+data <- tb_abalone
+```
+
+The target variable is `is_spam`.
+```{r define-target_name}
+name <- "abalone"
+target_name <- "Sex"
+```
+
+## Grid
+
+We consider the following grid:
+```{r define-grid-xgb}
+grid <- expand_grid(
+  max_depth = c(2, 4, 6),
+  nb_iter_total = 500,
+  eta = 0.3
+) |>
+  mutate(ind = row_number())
+```
+
+The different configurations are reported in @tbl-grid-values-xgb-real-data.
+```{r}
+#| tbl-cap: "Grid Search Values"
+#| label: tbl-grid-values-xgb-real-data
+DT::datatable(grid)
+```
+
+We define a function, `simul_xgb_real()`{.R} to train the model on a dataset for all different values of the hyperparameters of the grid (and for all iterations of each algorithm, defined by a row in the grid).
 ```{r define-simul_xgb_real}
 #| code-fold: true
 #| code-summary: Function `simul_xgb_real()`{.R}
@@ -971,83 +1041,507 @@ simul_xgb_real <- function(data,
 }
 ```
 
+## Final results: "abalone" dataset
 
-## Grid
-
-We consider the following grid:
-```{r define-grid-xgb}
-grid <- expand_grid(
-  max_depth = c(2, 4, 6),
-  nb_iter_total = 500,
-  eta = 0.3
-) |>
-  mutate(ind = row_number())
-```
-
-The different configurations are reported in @tbl-grid-values-xgb-real-data.
+We calculate the performance/calibration/dispersion metrics for all iterations and all hyperparameters of the grid:
 ```{r}
-#| tbl-cap: "Grid Search Values"
-#| label: tbl-grid-values-xgb-real-data
-DT::datatable(grid)
-```
-
-## Data
-
-In [Chapter -@sec-priors-beta], we estimated the shapes of Beta distributions using fitted scores from a GAMSEL model applied to various datasets from the UCI Machine Learning Repository. We saved these estimated priors and the datasets in R data files, which can now be easily loaded.
-
-The list of datasets and the name of the target variable:
-```{r define-datasets}
-datasets <- tribble(
-  ~name, ~target_name,
-  "abalone", "Sex",
-  "adult", "high_income",
-  "bank", "y",
-  "default", "default",
-  "drybean", "is_dermason",
-  "coupon", "y",
-  "mushroom", "edible",
-  "occupancy", "Occupancy",
-  "winequality", "high_quality",
-  "spambase", "is_spam"
+xgb_resul <- simul_xgb_real(
+  data,
+  target_name,
+  prior,
+  seed = 1234
 )
 ```
 
+We save the results for the dataset "spambase":
+```{r}
+save(xgb_resul, file = str_c("../output/real-data/xgb_resul_", name, ".rda"))
+```
 
-```{r load-data}
-for (name in datasets$name) {
-  # The data
-  load(str_c("../output/real-data/tb_", name, ".rda"))
-  # The Prior on the distribution of the scores
-  load(str_c("../output/real-data/priors_", name, ".rda"))
+We can now load the results:
+```{r}
+load(str_c("../output/real-data/xgb_resul_", name, ".rda"))
+```
+
+## Results 
+
+```{r}
+metrics_xgb_all <- xgb_resul$metrics_simul |>
+  mutate(
+    sample = factor(
+      sample,
+      levels = c("train", "valid", "calib", "test"),
+      labels = c("Train","Validation", "Calibration" ,"Test")
+    ),
+    recalib = factor(
+      recalib,
+      levels = c("none", "platt", "isotonic", "beta", "locfit"),
+      labels = c("None", "Platt", "Isotonic", "Beta", "Locfit")
+    )
+  )
+```
+
+For each replication, we made some hyperparameters vary. Let us identify some models of interest:
+
+- `smallest`: model with the lowest number of boosting iteration
+- `largest`: model with the highest number of boosting iteration
+- `largest_auc`: model with the highest AUC on validation set
+<!-- - `lowest_mse`: model with the lowest MSE on validation set -->
+- `lowest_ici`: model with the lowest ICI on validation set
+- `lowest_kl`: model with the lowest KL Divergence on validation set
+- `mediocre_ici`: model with a rather high ICI (uncalibrated model)
+
+```{r xgb-identify-trees-of-interest}
+#| code-fold: true
+# Identify the smallest tree on the validation set, when the scores are not
+# recalibrated
+smallest_xgb <-
+  metrics_xgb_all |>
+  filter(sample == "Validation", recalib == "None") |>
+  arrange(nb_iter) |>
+  slice_head(n = 1) |>
+  select(ind, nb_iter, recalib) |>
+  mutate(result_type = "smallest")
+
+# Identify the largest tree
+largest_xgb <-
+  metrics_xgb_all |>
+  filter(sample == "Validation", recalib == "None") |>
+  arrange(desc(nb_iter)) |>
+  slice_head(n = 1) |>
+  select(ind, nb_iter, recalib) |>
+  mutate(result_type = "largest")
+
+# Identify tree with highest AUC on test set
+highest_auc_xgb <-
+  metrics_xgb_all |>
+  filter(sample == "Validation", recalib == "None") |>
+  arrange(desc(AUC)) |>
+  slice_head(n = 1) |>
+  select(ind, nb_iter, recalib) |>
+  mutate(result_type = "largest_auc")
+
+# Identify tree with lowest brier
+lowest_brier_xgb <-
+  metrics_xgb_all |>
+  filter(sample == "Validation", recalib == "None") |>
+  arrange(brier) |>
+  slice_head(n = 1) |>
+  select(ind, nb_iter, recalib) |>
+  mutate(result_type = "lowest_brier")
+
+# Identify tree with lowest ICI
+lowest_ici_xgb <-
+  metrics_xgb_all |>
+  filter(sample == "Validation", recalib == "None") |>
+  arrange(ici) |>
+  slice_head(n = 1) |>
+  select(ind, nb_iter, recalib) |>
+  mutate(result_type = "lowest_ici")
+
+# Identify tree with lowest KL
+lowest_kl_xgb <-
+  metrics_xgb_all |>
+  filter(sample == "Validation", recalib == "None") |>
+  arrange(KL_20_true_probas) |>
+  slice_head(n = 1) |>
+  select(ind, nb_iter, recalib) |>
+  mutate(result_type = "lowest_kl")
+
+mediocre_ici_xgb <- 
+  metrics_xgb_all |>
+  filter(sample == "Validation", recalib == "None") |>
+  arrange(desc(ici)) |>
+  #slice_head(n = 1) |>
+  filter(nb_iter == 10 & ind == 1) |>
+  select(ind, nb_iter, recalib) |>
+  mutate(result_type = "mediocre_ici")
+
+# Merge these
+models_of_interest_xgb <-
+  smallest_xgb |>
+  bind_rows(largest_xgb) |>
+  bind_rows(highest_auc_xgb) |>
+  bind_rows(lowest_brier_xgb) |>
+  bind_rows(lowest_ici_xgb) |>
+  bind_rows(lowest_kl_xgb) |> 
+  bind_rows(mediocre_ici_xgb)
+
+models_of_interest_metrics <- NULL
+for (recalibration_method in c("None", "Platt", "Isotonic", "Beta", "Locfit")) {
+  # Add metrics now
+  models_of_interest_metrics <-
+    models_of_interest_metrics |>
+    bind_rows(
+      models_of_interest_xgb |> select(-recalib) |>
+        left_join(
+          metrics_xgb_all |>
+            filter(
+              recalib == recalibration_method,
+              sample %in% c("Validation", "Test")
+            ),
+          by = c("ind", "nb_iter"),
+          relationship = "many-to-many" # (calib, test)
+        )
+    )
+}
+
+
+models_of_interest_metrics <-
+  models_of_interest_metrics |>
+  mutate(
+    result_type = factor(
+      result_type,
+      levels = c(
+        "smallest", "largest", "largest_auc", "lowest_brier", 
+        "lowest_ici", "lowest_kl", "mediocre_ici"),
+      labels = c(
+        "Smallest", "Largest", "AUC*", "Brier*", 
+        "ICI*", "KL*", "High ICI"
+      )
+    )
+  )
+
+```
+
+```{r}
+#| tbl-cap: "Metrics for spambase dataset"
+#| label: tbl-results-xgb-spambase
+models_of_interest_metrics |> 
+  mutate(
+    across(
+      c(
+      "acc", "AUC", "brier", "ici", "log_loss", "inter_quantile_25_75",
+      "inter_quantile_10_90", starts_with("KL_"), "ind_cov", 
+      starts_with("prior_")
+      ), 
+      ~round(.x, 3)
+    )
+  ) |> 
+  DT::datatable()
+```
+
+### Distribution of Scores
+
+Let us extract all the histogram information computed over the simulations and put that in a single object, `scores_hist_all`.
+
+```{r define-scores_hist_all}
+scores_hist_all <- xgb_resul$scores_hist
+```
+
+We then define a function, `plot_bp_xgb()`{.R} which plots the distribution of scores on the test set for the "spambase" dataset. We also define a helper function, `plot_bp_interest()`, which plots the histogram of the scores at a specific iteration number. We will then be able to plot the distributions at the beginning of the boosting iterations, at the end, at a point where the AUC was the highest on the validation set, and at a point where the KL divergence between the distribution of scores on the validation set and the distribution of the true probabilities was the lowest. We will plot the distributions of the scores returned by the classifier, as well as those obtained with the reclibrators.
+
+```{r define-plot_metrics}
+#| code-fold: true
+#| code-summary: Function `plot_metrics()`{.R}
+plot_bp_interest <- function(metrics_interest,
+                             scores_hist_interest,
+                             label,
+                             recalib_method) {
+  subtitle <- str_c(
+    "Depth = ", metrics_interest$max_depth, ", ",
+    "AUC = ", round(metrics_interest$AUC, 2), ", \n",
+    "Brier = ", round(metrics_interest$brier, 2), ",",
+    "ICI = ", round(metrics_interest$ici, 2), ", ",
+    "KL = ", round(metrics_interest$KL_20_true_probas, 2)
+  )
+
+  if (recalib_method == "none") {
+    plot(
+      main = str_c(label, " (iter = ", metrics_interest$nb_iter,")"),
+      scores_hist_interest$test,
+      xlab = latex2exp::TeX("$\\hat{s}(x)$"),
+      ylab = ""
+    )
+  } else if (recalib_method == "platt") {
+    plot(
+      main = str_c(label, " (iter = ", metrics_interest$nb_iter,")"),
+      scores_hist_interest$test_c_platt,
+      xlab = latex2exp::TeX("$\\hat{s}(x)$"),
+      ylab = "",
+      col = colour_recalib[["Platt"]]
+    )
+  } else if (recalib_method == "iso") {
+    plot(
+      main = str_c(label, " (iter = ", metrics_interest$nb_iter,")"),
+      scores_hist_interest$test_c_iso,
+      xlab = latex2exp::TeX("$\\hat{s}(x)$"),
+      ylab = "",
+      col = colour_recalib[["Isotonic"]]
+    )
+  } else if (recalib_method == "beta") {
+    plot(
+      main = str_c(label, " (iter = ", metrics_interest$nb_iter,")"),
+      scores_hist_interest$test_c_beta,
+      xlab = latex2exp::TeX("$\\hat{s}(x)$"),
+      ylab = "",
+      col = colour_recalib[["Beta"]]
+    )
+  } else if (recalib_method == "locfit") {
+    plot(
+      main = str_c(label, " (iter = ", metrics_interest$nb_iter,")"),
+      scores_hist_interest$test_c_locfit,
+      xlab = latex2exp::TeX("$\\hat{s}(x)$"),
+      ylab = "",
+      col = colour_recalib[["Locfit"]]
+    )
+  } 
+  mtext(side = 3, line = -0.25, adj = .5, subtitle, cex = .5)
+}
+
+plot_bp_xgb <- function(paper_version = FALSE) {
+  # Focus on current scenario
+  #scores_hist_scenario <- scores_hist_all[[scenario]]
+  # Focus on a particular replication
+  #scores_hist_repn <- scores_hist_scenario[[repn]]
+  # # Focus on a value for max_depth
+  max_depth_val <- map_dbl(scores_hist_all, ~.x[[1]]$max_depth)
+  # i_max_depth <- which(max_depth_val == max_depth)
+  # scores_hist <- scores_hist_repn[[i_max_depth]]
+  
+  # True Probabilities
+  #simu_data <- simulate_data_wrapper(
+    #scenario = scenario,
+    #params_df = params_df,
+   # repn = repn # only one replication here
+  #)
+  true_prob <- prior$scores_gamsel$scores_train
+  #true_prob <-  simu_data$data$probs_train
+  
+  for (recalib_method in c("none", "platt", "iso", "beta", "locfit")) {
+    
+    i_method <- match(recalib_method, c("none", "platt", "iso", "beta", "locfit"))
+    recalib_method_lab <- c("None", "Platt", "Isotonic", "Beta", "Locfit")[i_method]
+    
+    # The metrics for the corresponding results, on the validation set
+    metrics_xgb_current_valid <-
+      metrics_xgb_all |>
+      filter(
+        sample == "Validation",
+        recalib == "None"
+      )
+    # and on the test set
+    metrics_xgb_current_test <-
+      metrics_xgb_all |>
+      filter(
+        sample == "Test",
+        recalib == recalib_method_lab
+      )
+    
+    if (paper_version == FALSE) {
+      hist(
+        true_prob,
+        breaks = seq(0, 1, by = .05),
+        xlab = "p", ylab = "",
+        main = "Prior Probabilities",
+        xlim = c(0, 1)
+      )
+      mtext(
+        side = 2, recalib_method_lab, line = 2.5, cex = 1,
+        font.lab = 2
+      )
+      # Iterations of interest----
+      ## Start of iterations
+      scores_hist_start <- scores_hist_all[[1]][[1]]
+      metrics_start <- metrics_xgb_current_test |>
+        filter(
+          nb_iter == scores_hist_start$nb_iter,
+          max_depth == scores_hist_start$max_depth
+        )
+      
+      plot_bp_interest(
+        metrics_interest = metrics_start,
+        scores_hist_interest = scores_hist_start,
+        label = "Start",
+        recalib_method = recalib_method
+      )
+      
+      ## End of iterations
+      scores_hist_end <- scores_hist_all[[1]][[length(scores_hist_all[[1]])]]
+      metrics_end <- metrics_xgb_current_test |>
+        filter(
+          nb_iter == scores_hist_end$nb_iter,
+          max_depth == scores_hist_start$max_depth
+        )
+      plot_bp_interest(
+        metrics_interest = metrics_end,
+        scores_hist_interest = scores_hist_end,
+        label = "End",
+        recalib_method = recalib_method
+      )
+    }
+    ## Iteration with max AUC on validation set
+    metrics_valid_auc_star <-
+      metrics_xgb_current_valid |> arrange(desc(AUC)) |> dplyr::slice(1)
+    nb_iter_auc <- metrics_valid_auc_star$nb_iter
+    max_depth_auc_star <- metrics_valid_auc_star$max_depth
+    i_max_depth_auc_star <- which(max_depth_val == max_depth_auc_star)
+    
+    metrics_max_auc <-
+      metrics_xgb_current_test |>
+      filter(nb_iter == !!nb_iter_auc, max_depth == max_depth_auc_star)
+    # Note: indexing at 0 here...
+    ind_auc <- which(map_dbl(scores_hist_all[[i_max_depth_auc_star]], "nb_iter") == nb_iter_auc)
+    scores_hist_max_auc <- scores_hist_all[[i_max_depth_auc_star]][[ind_auc]]
+    plot_bp_interest(
+      metrics_interest = metrics_max_auc,
+      scores_hist_interest = scores_hist_max_auc,
+      label = "AUC*",
+      recalib_method = recalib_method
+    )
+    if (paper_version == TRUE) {
+      mtext(
+        side = 2, recalib_method_lab, line = 2.5, cex = 1,
+        font.lab = 2
+      )
+    }
+    
+    ## Min Brier on validation set
+    metrics_valid_brier_star <-
+      metrics_xgb_current_valid |> arrange(brier) |> dplyr::slice(1)
+    nb_iter_brier <- metrics_valid_brier_star$nb_iter
+    max_depth_brier_star <- metrics_valid_brier_star$max_depth
+    i_max_depth_brier_star <- which(max_depth_val == max_depth_brier_star)
+    
+    metrics_min_brier <-
+      metrics_xgb_current_test |>
+      filter(nb_iter == !!nb_iter_brier, max_depth == max_depth_brier_star)
+    ind_brier <- which(map_dbl(scores_hist_all[[i_max_depth_brier_star]], "nb_iter") == nb_iter_brier)
+    scores_hist_min_brier <- scores_hist_all[[i_max_depth_brier_star]][[ind_brier]]
+    plot_bp_interest(
+      metrics_interest = metrics_min_brier,
+      scores_hist_interest = scores_hist_min_brier,
+      label = "Brier*",
+      recalib_method = recalib_method
+    )
+    
+    ## Min ICI on validation set
+    metrics_valid_ici_star <-
+      metrics_xgb_current_valid |> arrange(ici) |> dplyr::slice(1)
+    nb_iter_ici <-   metrics_valid_ici_star$nb_iter
+    max_depth_ici_star <- metrics_valid_ici_star$max_depth
+    i_max_depth_ici_star <- which(max_depth_val == max_depth_ici_star)
+    
+    metrics_min_ici <-
+      metrics_xgb_current_test |>
+      filter(nb_iter == !!nb_iter_ici, max_depth == max_depth_ici_star)
+    ind_ici <- which(map_dbl(scores_hist_all[[i_max_depth_ici_star]], "nb_iter") == nb_iter_ici)
+    scores_hist_min_ici <- scores_hist_all[[i_max_depth_ici_star]][[ind_ici]]
+    plot_bp_interest(
+      metrics_interest = metrics_min_ici,
+      scores_hist_interest = scores_hist_min_ici,
+      label = "ICI*",
+      recalib_method = recalib_method
+    )
+    
+    ## Min KL on validation set
+    metrics_valid_kl_star <-
+      metrics_xgb_current_valid |> arrange(KL_20_true_probas) |> dplyr::slice(1)
+    nb_iter_kl <- metrics_valid_kl_star$nb_iter
+    max_depth_kl_star <- metrics_valid_kl_star$max_depth
+    i_max_depth_kl_star <- which(max_depth_val == max_depth_kl_star)
+    
+    metrics_min_kl <-
+      metrics_xgb_current_test |>
+      filter(nb_iter == !!nb_iter_kl, max_depth == max_depth_kl_star)
+    ind_kl <- which(map_dbl(scores_hist_all[[i_max_depth_kl_star]], "nb_iter") == nb_iter_kl)
+    scores_hist_min_kl <- scores_hist_all[[i_max_depth_kl_star]][[ind_kl]]
+    plot_bp_interest(
+      metrics_interest = metrics_min_kl,
+      scores_hist_interest = scores_hist_min_kl,
+      label = "KL*",
+      recalib_method = recalib_method
+    )
+    
+    ## Mediocre ICI on validation set
+    identified_mici <-  mediocre_ici_xgb
+    
+    metrics_valid_mici_star <- metrics_xgb_current_valid |> 
+      filter(ind == identified_mici$ind, nb_iter == identified_mici$nb_iter)
+    nb_iter_mici <- metrics_valid_mici_star$nb_iter
+    max_depth_mici_star <- metrics_valid_mici_star$max_depth
+    i_max_depth_mici_star <- which(max_depth_val == max_depth_mici_star)
+    
+    metrics_mici <-
+      metrics_xgb_current_test |>
+      filter(nb_iter == !!nb_iter_mici, max_depth == max_depth_mici_star)
+    ind_mici <- which(map_dbl(scores_hist_all[[i_max_depth_mici_star]], "nb_iter") == nb_iter_mici)
+    scores_hist_mici <- scores_hist_all[[i_max_depth_mici_star]][[ind_mici]]
+    plot_bp_interest(
+      metrics_interest = metrics_mici,
+      scores_hist_interest = scores_hist_mici,
+      label = "Med. ICI",
+      recalib_method = recalib_method
+    )
+  }
 }
 ```
 
-
-## Estimations: Extreme Gradient Boosting 
-
-The models are estimated in parallel. The number of available cores can be determined using the following command:
-```{r define-nb_cores}
-library(future)
-nb_cores <- future::availableCores() - 1
+```{r}
+#| fig-cap: Distribution of scores on the test set (spambase)
+#| label: fig-xgb-spambase-scores
+#| code-fold: true
+#| fig-height: 6
+#| fig-width: 14
+par(mfrow = c(5,8), mar = c(4.1, 4, 3.5, 1.5))
+plot_bp_xgb()
 ```
 
-We use the following loop to estimate all the models across each dataset:
+```{r}
 
-```{r estim, eval=FALSE}
-datasets <- datasets[-1,]
-seed <- 1234
-for (name in datasets$name) {
-  plan(multisession, workers = nb_cores)
-  current_data <- get(str_c("tb_", name))
-  current_priors <- get(str_c("priors_", name))
-  current_target_name <- datasets |>
-    filter(name == !!name) |> pull(target_name)
-  ## Extreme Gradient Boosting----
-  xgb_resul <- simul_xgb_real(data = current_data,
-                              target_name = current_target_name,
-                              prior = current_priors,
-                              seed = seed)
-  save(xgb_resul, file = str_c("../output/real-data/xgb_resul_", name, ".rda"))
-}
+table_models_interest <- 
+  models_of_interest_metrics |> 
+  filter(sample == "Test") |> 
+  select(
+    recalib, sample, result_type, 
+    brier, ici, kl = KL_20_true_probas
+  ) |> 
+  filter(
+    result_type %in% c("AUC*", "KL*", "Largest")
+  )
 
+
+initial_points <- table_models_interest |> 
+  filter(recalib == "None")
+
+points_after_c <- initial_points |> 
+  select(result_type, ici, kl) |> 
+  left_join(
+    table_models_interest |> 
+      filter(recalib %in% c("Platt", "Isotonic", "Beta", "Locfit")) |> 
+      select(recalib, result_type, ici, kl) |> 
+      rename(ici_end = ici, kl_end = kl),
+    relationship = "many-to-many" # (Platt, Isotonic, Beta and Locfit)
+  )
+
+
+ggplot() +
+  geom_point(
+    data = initial_points,
+    mapping = aes(x = ici, y = kl, shape = result_type),
+    size = 2
+    ) +
+  geom_segment(
+    data = points_after_c,
+    mapping = aes(
+      x = ici, y = kl, xend = ici_end, yend = kl_end,
+      colour = recalib, linetype = recalib
+      ),
+    arrow = arrow(length=unit(.2, 'cm'))
+  ) +
+  scale_shape_manual(
+    NULL,
+    values = c(
+      # "Smallest" = 1,
+      "Largest" = 2,
+      "AUC*" = 19,
+      "KL*" = 15
+    )
+  ) +
+  labs(x = "ICI", y = "KL Divergence") +
+  scale_colour_manual("Recalibration", values = colour_recalib) +
+  scale_linetype_discrete("Recalibration") +
+  theme_paper()
 ```
+
+
